--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,9 @@ jobs:
       # 如果缓存没有命中，安装依赖
       - name: Install dependencies
         run: npm install
-
+      # 运行构建脚本
+      - name: Cd
+        run: cd ..
       # 运行构建脚本
       - name: Generate Page
         run: npm run generate
