--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,7 @@ jobs:
           # 选择要使用的 node 版本
           node-version: '14'
       - name: Cd
-        run: cd ..
-      # 如果缓存没有命中，安装依赖
-      - name: Install dependencies
-        run: npm install
+        run: cd pg
       # 运行构建脚本
 
       # 运行构建脚本
