--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           # 选择要使用的 node 版本
           node-version: '14'
       - name: Cd
-        run: cd pg
+        run: ls
       # 运行构建脚本
 
       # 运行构建脚本
