--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
   deploy:
     # Add a dependency to the build job
-    needs: build
+    needs: generatePage
 
     # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
