--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "generate": "node ./generate.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "upload": "sh ./upload.sh"
   },
   "dependencies": {
     "husky": "^8.0.2",
